# backend-hello-rust

./: Cargo.toml  Dockerfile  web_config.json
src/: config.rs  hello_controller.rs  main.rs  tracing_controller.rs
tests/: trace.http
